Fixed Plugins segments

--- a/src/definitions/elements/segment.less
+++ b/src/definitions/elements/segment.less
@@ -23,7 +23,7 @@
 
 .ui.segment {
   position: relative;
-  background: @background;
+  background: @pageBackground;
   box-shadow: @boxShadow;
   margin: @margin;
   padding: @padding;
